--- a/src/components/cumbre2026/RegistroFlow.astro
+++ b/src/components/cumbre2026/RegistroFlow.astro
@@ -1,3 +1,7 @@
+---
+const cspNonce = Astro.locals?.cspNonce;
+---
+
 <div id="registro-app" class="max-w-4xl mx-auto space-y-8">
   
   <!-- Loading State -->
@@ -120,7 +124,7 @@
   </div>
 </template>
 
-<script type="module">
+<script type="module" nonce={cspNonce}>
   let supabase = null;
 
   async function getSupabase() {
